# Todo-Rust-Axum-Askama-HTMX

./: .env.example  .gitignore  Cargo.toml  Docker-compose.yaml  LICENSE  README.md  askama.toml  package-lock.json  package.json
migrations/: 20240219072907_setup.sql
src/: main.rs
src/api/: mod.rs
src/api/handlers/: mod.rs  todo.rs
src/api/middleware/: mod.rs
src/api/templates/: base.html
src/api/templates/components/: add_todo.html  todo.html  todo_field.html  todo_list.html
src/api/templates/pages/: todos.html
src/api/utils/: mod.rs
